Support 1 Wiimote for Player 1.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NES-Wiimote.
-The purpose of this project is to operate Famicon by a Wii controller using PIC.
+The purpose of this project is to operate Famicom(Japanese NES) by a Wiimote using PIC.
 
 Repository:
  https://github.com/tocchi02/NES-Wiimote
